--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-multi-date-picker": "^3.3.4",
+    "react-js-pagination": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
