--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,13 +13,14 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-js-pagination": "^3.0.3",
+    "react-multi-date-picker": "^3.3.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "react-multi-date-picker": "^3.3.4",
-    "react-js-pagination": "^3.0.3"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
